@@ -21,6 +21,7 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.lang.reflect.Constructor;
 import java.util.Collections;
+import java.util.Set;
 
 import javax.annotation.Nullable;
 
@@ -87,7 +88,7 @@ public final class ScalaFmtStep implements Serializable {
 
 		State(JarState jarState, @Nullable File configFile) throws IOException {
 			this.jarState = jarState;
-			this.configSignature = FileSignature.signAsList(configFile == null ? Collections.emptySet() : Collections.singleton(configFile));
+			this.configSignature = FileSignature.signAsList(configFile == null ? Collections.emptySet() : Set.of(configFile));
 		}
 
 		FormatterFunc createFormat() throws Exception {
